Add shorthand build script

--- a/demo/package.json
+++ b/demo/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.9.0"
   },
   "scripts": {
-    "develop": "gatsby develop"
+    "develop": "gatsby develop",
+    "dev": "gatsby develop"
   }
 }
