Update demo for namespace change

--- a/demo/package.json
+++ b/demo/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "gatsby": "^2.15.1",
-    "gatsby-theme-soundcloud-single": "*",
+    "@rttnbrgr/gatsby-theme-soundcloud": "*",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
